[gd_scene load_steps=5 format=2]

[ext_resource path="res://Car/Car.gd" type="Script" id=1]
[ext_resource path="res://Car/assets/wheel.glb" type="PackedScene" id=2]
[ext_resource path="res://Car/assets/car.glb" type="PackedScene" id=3]

[sub_resource type="BoxShape" id=1]

[node name="Car" type="VehicleBody"]
contact_monitor = true
script = ExtResource( 1 )

[node name="SensorPlaceholder" type="RemoteTransform" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.825, 0, 0, 0, 0.59, 0, 0, 0, 2.04, 0, 0.842136, 0 )
shape = SubResource( 1 )

[node name="car" parent="." instance=ExtResource( 3 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0.716385, 0.016 )

[node name="front_left_wheel" type="VehicleWheel" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.683452, 0.308272, 1.4549 )
use_as_steering = true
wheel_radius = 0.31
suspension_stiffness = 50.0
damping_compression = 1.9
damping_relaxation = 2.0

[node name="wheel" parent="front_left_wheel" instance=ExtResource( 2 )]
transform = Transform( -2.18557e-08, 0.5, 0, -0.5, -2.18557e-08, 0, 0, 0, 0.5, 0, 0, 0 )

[node name="front_right_wheel" type="VehicleWheel" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.683, 0.308332, 1.455 )
use_as_steering = true
wheel_radius = 0.31
suspension_stiffness = 50.0
damping_compression = 1.9
damping_relaxation = 2.0

[node name="wheel" parent="front_right_wheel" instance=ExtResource( 2 )]
transform = Transform( -2.18557e-08, -0.5, 0, 0.5, -2.18557e-08, 0, 0, 0, 0.5, 0, 0, 0 )

[node name="back_left_wheel" type="VehicleWheel" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.683, 0.308332, -1.00964 )
use_as_traction = true
wheel_radius = 0.31
suspension_stiffness = 50.0
damping_compression = 1.9
damping_relaxation = 2.0

[node name="wheel" parent="back_left_wheel" instance=ExtResource( 2 )]
transform = Transform( -2.18557e-08, 0.5, 0, -0.5, -2.18557e-08, 0, 0, 0, 0.5, 0, 0, 0 )

[node name="back_right_wheel" type="VehicleWheel" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.683, 0.308332, -1.00964 )
use_as_traction = true
wheel_radius = 0.31
suspension_stiffness = 50.0
damping_compression = 1.9
damping_relaxation = 2.0

[node name="wheel" parent="back_right_wheel" instance=ExtResource( 2 )]
transform = Transform( -2.18557e-08, -0.5, 0, 0.5, -2.18557e-08, 0, 0, 0, 0.5, 0, 0, 0 )

[editable path="car"]
